--- a/2. 컴퓨터 기술 소개 웹 페이지 HTML/WebProgramming.html
+++ b/2. 컴퓨터 기술 소개 웹 페이지 HTML/WebProgramming.html
@@ -2,30 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>웹프로그래밍 P.58</title>
-<style>
-body { background-color : white; color : blue;
-margin-left : 40px; margin-right : 40px;}
-h3 { text-align : center; color : darkblue;}
-hr { height : 5px; border : solid black; 
-background-color : black }
-span { color: red; font-size: 20px; }
-</style>
-<script>
-    function show(){
-        document.getElementById("fig").src = "Viet.jpg";
-    }
-    function hide() {
-        document.getElementById("fig").src="";
-    }
-</script>
-</head>
+<title>웹프로그래밍 P.104</title>
+<h1>   
+    스마트폰
+</h1>
 <body>
-<h3 onmouseover="show()" onmouseout="hide()">
-    손영빈</h3>
-<hr>
-<div> <img id = "fig" src = "" width="15%"   ></div>
-저는 대한민국에서 태어나서 컴퓨터 공학을 전공하는 학생입니다. 제가 제일 좋아하는 과목은 <span>웹 프로그래밍
-</span>이고, 그 중에서도 <span>자바스크립트</span>를 제일 잘합니다.
+<h4>   
+    스마트폰은 컴퓨터를 결합한 무선 휴대전화기이다. 
+    PC에서 실행되는 운영체제보다 작게 만든 모바일 운영체제를 탑재하여 
+    인터넷 검색, 전자우편, 간단한 문서 편집, 카메라, 오디오 및 비디오 재생 등 PC의 기능을 거의 모두 갖추고 있다.
+</h4>
+<audio src="PhoneJustice.mp4" controls loop></audio>
+<h2>
+    목차
+</h2>
+<ul>
+    <li><a href="#History">역사</a></li>
+    <li><a href="#Android">안드로이드폰</a></li>
+    <li><a href="#Iphone">아이폰</a></li>
+    <li><a href="#Sample">샘플</a></li>
+</ul>
+<h2 id="History"><a href="https://namu.wiki/w/%EC%8A%A4%EB%A7%88%ED%8A%B8%ED%8F%B0/%EC%97%AD%EC%82%AC">역사</a></h2>
+<h4>
+    스마트폰의 기원은 1990년대 초반으로 거슬러 올라갑니다. 그 당시에는 개인용 전자기기와 휴대폰이 별개로 존재했습니다. 하지만 1992년에 IBM이 개발한 Simon Personal Communicator라는 기기가 최초의 스마트폰으로 소개되었습니다. Simon은 전화 통화, 이메일, 팩스, 달력 등의 기능을 갖추고 있었습니다.
+</h4>
+<h2 id="Android"><a href="https://namu.wiki/w/Android?from=%EC%95%88%EB%93%9C%EB%A1%9C%EC%9D%B4%EB%93%9C%28OS%29">안드로이드</a></h2>
+<h4>
+    Android는 Linux 커널을 기반으로 Google에서 제작하고 있는 범용 모바일 운영 체제와 미들웨어 및 중요 애플리케이션이 포함된 배포판이다. Google은 새로운 운영 체제의 버전 공개와 동시에 소스를 공개하고 있다. 이렇게 공개된 소스를 AOSP라고 한다.
+</h4>
+<h2 id="Iphone"><a href="https://namu.wiki/w/iPhone">아이폰</a></h2>
+<h4>
+    아이폰(영어: iphone)은 2007년 1월 9일, 애플이 발표한 휴대 전화 시리즈이다. 
+    미국 샌프란시스코에서 열린 맥월드 2007에서 애플의 창업자 중 한명인 스티브 잡스가 발표했다.
+</h4>
+<h2 id="Sample">샘플</h2>
+<caption><center><스마트폰 샘플></center></caption>
+<img src="SmartPhone.jpg" width="80% ">
 </body>
 </html>
