3주차 과제 업로드

--- a/3주차 과제 5장 실습문제/p.255 7. animation 활용2/Img Hover.html
+++ b/3주차 과제 5장 실습문제/p.255 7. animation 활용2/Img Hover.html
@@ -6,6 +6,7 @@
 </head>
 <style>
     @keyframes scale_image{
+        0%{transform: scale(100%, 100%);}
         100%{transform:scale(400%,100%)}}
     img:hover{animation-name: scale_image; animation-duration: 2s;}
 </style>
